provisioning/stream/kubernetes/templates/cloud/aws/service-http-source.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: stream-http-source
  namespace: $NAMESPACE
  labels:
    app: stream-http-source
spec:
  type: ClusterIP
  selector:
    app: stream-http-source
  ports:
    - port: 80
      targetPort: 7000
      protocol: TCP
      name: http
