provisioning/stream/kubernetes/templates/cloud/aws/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: buffer-api
  namespace: $NAMESPACE
  labels:
    app: buffer-api
spec:
  type: ClusterIP
  selector:
    app: buffer-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
