provisioning/stream/kubernetes/templates/cloud/aws/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buffer-api
  namespace: $NAMESPACE
  labels:
    app: buffer-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "buffer.${HOSTNAME_SUFFIX}"
      http:
        paths:
          - backend:
              service:
                name: buffer-api
                port:
                  number: 80
            path: /
            pathType: Prefix
